Fixed alignment of page header for IE (tested with IE7).

--- a/source/css/default.css
+++ b/source/css/default.css
@@ -15,6 +15,8 @@ h2 {
 	color: #000055;
 	border: 1px solid #bbbbdd;
 	padding-left: 10px;
+	margin-top: 10px;
+	margin-left: 0px;
 }
 
 td {
